--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- //////sweet alret///// -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- ///////// -->
-    <link rel="stylesheet" href="/moon.css" />
+    <link rel="stylesheet" href="./moon.css" />
   </head>
   <body>
     <div class="container">
